# libalexandria

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  CTestCustom.cmake.in  LICENSE  LICENSE.C  LICENSE.F  LICENSE.txt  Makefile  README  README.md  README.sloc  README.todo  index.html  laF_SVM.F  laF_print.F  laf_print.f  libalexandria.pc.in  params.json  settings.user.txt
android/: .gitignore  AndroidManifest.xml  CMakeLists.txt  Lannister.jo  Lannister.jo.cmake.in  README.txt  UseAndroid.cmake  UseAndroidApps.cmake  UseApps.cmake
android/assets/: CMakeLists.txt
android/jni/: .gitignore  Android.mk.in  Application.mk.in  CMakeLists.txt  base
android/res/: CMakeLists.txt
android/res/layout/: activity_lannister.xml
android/res/values/: strings.xml
android/src/: CMakeLists.txt
android/src/lib/alexandria/: Homework.java  Lannister.java  MLHandler.java  MLReceiver.java  MLService.java  Model.aidl  Pingable.java  base
android/src/lib/alexandria/action/: package-info.java
android/src/lib/alexandria/lannister/: Homework.java  Lannister.java  MLHandler.java  MLReceiver.java  MLService.java  Pingable.java  package-info.java
bindings/: CMakeLists.txt  README.txt  (+3 more)
bindings/c/: CMakeLists.txt  laC_print.c
bindings/c/proof/: CMakeLists.txt  simple_poc.c
bindings/java/: CMakeLists.txt  jla_HTM.c  jla_SVM.c  jla_print.c  jla_signals.c  laF_SVM.c  laF_print.c  laJ_HTM.c  laJ_SVM.c  laJ_aqueduct.c  laJ_print.c  laJ_wavelets.c  laf_print.c  libalexandria_POC.c  poc
bindings/java/jni/: Android.mk.in  CMakeLists.txt  laJ_HTM.c  laJ_SVM.c  laJ_aqueduct.c  laJ_cortical.c  laJ_kernels.c  laJ_print.c  laJ_sigmoidal.c  laJ_wavelets.c
bindings/java/lib/alexandria/: ComplexNumber.java  Generate.java  Label.java  Labelled.java  LabelledEntity.java  LearningModel.java  Log.java  ModelConstants.java  Profileable.java  Testable.java  Trainable.java  package-info.java
bindings/java/lib/alexandria/annotation/: Experimental.java  TODO.java  Undocumented.java  package-info.java
bindings/java/libalexandria/: ComplexNumber.java  Copyable.java  Feature.java  Generate.java  LabelledEntity.java  LearningModel.java  ModelConstants.java  ModelType.java  POC.java  Profileable.java  package-info.java
bindings/java/libalexandria/ann/: Cortex.java  JavaWorker.java  NativeWorker.java  NeuralNetwork.java  Worker.java
bindings/java/libalexandria/base/: Aleph.java  Cardinal.java  ClosedInterval.java  ContinuousSampleSpace.java  DiscreteSampleSpace.java  Interval.java  MetricSpace.java  Ordinal.java  SampleSpace.java
bindings/java/libalexandria/functional/: Aqueduct.java  DataPipeline.java  Function.java  Kernel.java  KernelMap.java  ParameterTreeMap.java  Parameterized.java  ParameterizedFunction.java  RealParameterizedFunction.java  SigmoidFunction.java  SigmoidType.java  SynchronizationTask.java  Wavelet.java  package-info.java
bindings/java/libalexandria/proof/: LatchedThreadGroup.java  POC.java  package-info.java
bindings/java/libalexandria/reinforcement/: MarkovDecisionProcess.java  package-info.java
bindings/java/libalexandria/sampling/: Cardinal.java  ClosedInterval.java  ContinuousSampleSpace.java  DiscreteSampleSpace.java  Feature.java  MetricSpace.java  Ordinal.java  SampleSpace.java  package-info.java
bindings/java/libalexandria/supervised/: ClassificationAlgorithm.java  KSVM.java  NonLinearSupportVectorMachine.java  RegressionAlgorithm.java  SVM.java  SupervisedAlgorithm.java  SupportVectorMachine.java  package-info.java
bindings/java/libalexandria/unsupervised/: ClusteringAlgorithm.java  KMeans.java  SeparationAlgorithm.java  package-info.java
dev/: .gitignore  CMakeLists.txt  README.txt  bootstrap.sh  complete.sh  java-extras.txt  ld.so.conf.in  libalexandria.pc.in  pre-commit  settings.user.txt  user.CMakeCache.txt
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  README.txt
doc/doxygen/: .gitignore
doc/examples/: CMakeLists.txt
fortran/: CMakeLists.txt  laF_DWT.F  laF_HTM_codec.F  laF_HTM_space.F  laF_HTM_time.F  laF_SVM.F  laF_kernels.F  laF_print.F  laF_signals.F  laF_wavelets.F
glue/: .gitignore  CMakeLists.txt  ConfigureNativeTarget.cmake  README.txt  la_glue.c  la_helper.c  la_log.c
glue/swig/: .gitignore  CMakeLists.txt  Makefile  README.sh  build.sh  kolla.i  laPy_glue.py  laRb_glue.rb  la_glue.i  swagger.i  swagger.rb
glue/swig/python/: setup.py
glue/swig/ruby/: Rakefile  extconf.rb  kolla.rb  swagger.gemspec  swagger.gemspec.in  swagger.pem  swagger.rb  swagger.rb.in
glue/swig/swagger/: .gitignore
include/: .gitignore  CMakeLists.txt  laCXX_print.h  laF_HTM.h  laF_SVM.h  laF_print.h  laf_constants.h  libalexandria.c  libalexandria.h.in  libalexandria.hpp  libalexandria_FTH.h
include/libalexandria/: CMakeLists.txt  laCXX_print.h  laC_print.h  laF_DWT.h  laF_HTM.h  laF_SVM.h  laF_constants.h  laF_print.h  laF_signals.h  la_constants.h  la_extern.h  la_glue.h  la_helper.h  la_log.h  la_swagger.h  la_types.h
include/libalexandria/jni/: CMakeLists.txt
include/libalexandria/laJ/: .gitignore  CMakeLists.txt  lib_alexandria_functional_RealParameterizedFunction.h  lib_alexandria_functional_kernels_Kernel.h  lib_alexandria_functional_wavelets_Wavelet.h  lib_alexandria_functions_RealParameterizedFunction.h  lib_alexandria_functions_kernels_Kernel.h  lib_alexandria_functions_sigmoid_SigmoidFunction.h  lib_alexandria_functions_wavelets_Wavelet.h  lib_alexandria_models_reinforcement_nn_NativeWorker.h  lib_alexandria_pipeline_Aqueduct.h  lib_alexandria_pipeline_Aqueduct_State.h  lib_alexandria_proof_POC.h  lib_alexandria_reinforcement_nn_NativeWorker.h
include/libalexandria/laX/: CMakeLists.txt  laPy_swagger.h  laRb_swagger.h
testing/: CMakeLists.txt
tests/: CMakeLists.txt
tests/c/: CMakeLists.txt  simple_poc.c
tests/cxx/: CMakeLists.txt  simple_poc.cxx
tests/fortran/: CMakeLists.txt  laF_test_poc.F
tests/java/: CMakeLists.txt  manifest.extras.in
tests/java/android/: CMakeLists.txt
tests/java/jni/: CMakeLists.txt  laJ_print.c
tests/swig/: CMakeLists.txt  laPy_glue.py  laRb_glue.rb
(+190 files in other folders)
